# simple_crud

./: .gitignore  Dockerfile  Forms.py  Makefile  Readme.md  TCC.txt  app.py  docker-compose.yml  fixtures.py  pyproject.toml  requirements.txt
forms/: Forms.py
instance/: config.py
models/: Account.py  BaseModel.py  ModelTemplate.py  Produto.py  Usuario.py  sql_teste.py
repository/: ModelTemplate.py  base_mongo.py  sql_teste.py
templates/: crud.html
views/: ModelTemplate.py  ModelTemplateView.py  base_crud.py  produto.py  setup.py  sql_teste.py  user.py
