[tool.poetry]
name = "simple-crud"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pip="23.0.1"
Flask-Cors="4.0.0"
Flask="2.2.5"
setuptools="69.5.1"
bootstrap-flask="2.4.0"
flask_mongoengine="1.0.0"
flask_login="0.6.3"
flask-mysql="1.5.2"
flask-sqlalchemy = "^3.1.1"
sqlalchemy = "2.0.29"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
